--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wx",
+  "name": "wechat-bot",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
+    "file-box": "^1.4.12",
     "log4js": "^6.3.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "wechaty": "^1.11.25",
-    "wechaty-puppet-wechat": "^1.10.5"
-  },
-  "devDependencies": {
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "wechaty-puppet-wechat": "^1.11.8"
   }
 }
